add eco cabins layout

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
+@font-face {
+  font-family: Rubik;
+  src: url(assets/fonts/Rubik/Rubik-Medium.ttf) format('opentype');
+}
+
+@font-face {
+  font-family: Merriweather;
+  src: url(assets/fonts/Merriweather/Merriweather-black.ttf) format('opentype');
+}
+
+app-root {
+  height: 100%;
+  background-color: black;
+}
